--- a/webapp/src/main/resources/exifweb.properties
+++ b/webapp/src/main/resources/exifweb.properties
@@ -25,3 +25,6 @@ httpd-admin.base=http://127.0.0.1:82/
 darkstat.port=667
 darkstat.niceness=19
 system.default.niceness=-3
+
+# see tech.log
+ehcache.spring.name=spring-cache
