--- a/storage-impl-hbm/src/main/resources/hibernate.properties
+++ b/storage-impl-hbm/src/main/resources/hibernate.properties
@@ -1,4 +1,5 @@
-hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
+hibernate.dialect.storage_engine=innodb
 hibernate.jdbc.batch_size=20
 hibernate.show_sql=true
 hibernate.format_sql=true
@@ -16,7 +17,7 @@ hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFa
 # hbm 3.3 and higher?
 #hibernate.cache.region.factory_class=net.sf.ehcache.hibernate.EhCacheRegionFactory
 
-# default ehcache.xml
+# default is ehcache.xml
 #net.sf.ehcache.configurationResourceName.in_memory_db=ehcache-in_memory_db.xml
 #net.sf.ehcache.configurationResourceName.jdbc_ds=ehcache-jdbc_ds.xml
 
@@ -37,6 +38,3 @@ hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFa
 # hibernate.id.new_generator_mappings=true
 # hibernate.current_session_context_class=jta
 # javax.persistence.validation.mode=
-
-ramdb.hibernate.dialect=org.hibernate.dialect.H2Dialect
-ramdb.hibernate.hbm2ddl.auto=update
