--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,14 @@
 
             <dependency>
                 <groupId>exifweb</groupId>
+                <artifactId>storage-entities</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>exifweb</groupId>
                 <artifactId>storage-impl-hbm</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
@@ -374,8 +382,20 @@
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
-                <version>1.4.194</version>
+                <version>1.4.196</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
+            <!--<dependency>-->
+                <!--<groupId>org.hsqldb</groupId>-->
+                <!--<artifactId>hsqldb</artifactId>-->
+                <!--<version>2.4.0</version>-->
+            <!--</dependency>-->
+            <!-- https://mvnrepository.com/artifact/org.apache.derby/derby -->
+            <!--<dependency>-->
+                <!--<groupId>org.apache.derby</groupId>-->
+                <!--<artifactId>derby</artifactId>-->
+                <!--<version>10.14.1.0</version>-->
+            <!--</dependency>-->
 
             <!-- https://mvnrepository.com/artifact/junit/junit -->
             <dependency>
@@ -390,20 +410,24 @@
                 <version>1.3</version>
             </dependency>
             <dependency>
+                <groupId>org.exparity</groupId>
+                <artifactId>hamcrest-date</artifactId>
+                <version>2.0.4</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
                 <version>${springframework.version}</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/io.takari.junit/takari-cpsuite -->
+            <!--
+                https://mvnrepository.com/artifact/io.takari.junit/takari-cpsuite
+
+                @RunWith(ClasspathSuite.class)
+            -->
             <dependency>
                 <groupId>io.takari.junit</groupId>
                 <artifactId>takari-cpsuite</artifactId>
                 <version>1.2.7</version>
-            </dependency>
-            <dependency>
-                <groupId>org.exparity</groupId>
-                <artifactId>hamcrest-date</artifactId>
-                <version>2.0.4</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/net.sf.jexample/jexample -->
             <!--<dependency>-->
