jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1;MODE=MySQL

--- a/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
+++ b/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
@@ -12,7 +12,7 @@ ramdb.hibernate.hbm2ddl.auto=update
 # H2 Database
 ramdb.hibernate.dialect=org.hibernate.dialect.H2Dialect
 ramdb.jdbc.driverClass=org.h2.Driver
-ramdb.jdbc.url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1
+ramdb.jdbc.url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1;MODE=MySQL
 ramdb.jdbc.userName=
 ramdb.jdbc.password=
 #
