--- a/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
+++ b/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
@@ -1,10 +1,16 @@
-# jdbc.url=jdbc:mysql://adrhc.go.ro:3306/exifweb?useSSL=false
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/exifweb?useSSL=false
+# mysql, exifweb
 jdbc.url=jdbc:mysql://${db.host}:3306/exifweb?useSSL=false
 jdbc.userName=exifweb
 jdbc.password=exifweb
 jdbc.minimumIdle=1
 jdbc.maximumPoolSize=2
+
+# mysql, exifweb-test
+test.jdbc.url=jdbc:mysql://${test.db.host}:3306/exifweb-test?useSSL=false
+test.jdbc.userName=exifweb
+test.jdbc.password=exifweb
+test.jdbc.minimumIdle=1
+test.jdbc.maximumPoolSize=2
 
 # in memory db
 ramdb.hibernate.hbm2ddl.auto=update
