test-jdbc-ds draft

--- a/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
+++ b/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
@@ -5,12 +5,13 @@ jdbc.password=exifweb
 jdbc.minimumIdle=1
 jdbc.maximumPoolSize=2
 
-# mysql, exifweb-test
-test.jdbc.url=jdbc:mysql://${test.db.host}:3306/exifweb-test?useSSL=false
+# mysql, exifweb-tests
+test.jdbc.url=jdbc:mysql://${test.db.host}:3306/exifweb-tests?useSSL=false
 test.jdbc.userName=exifweb
 test.jdbc.password=exifweb
 test.jdbc.minimumIdle=1
 test.jdbc.maximumPoolSize=2
+test.hibernate.hbm2ddl.auto=update
 
 # in memory db
 ramdb.hibernate.hbm2ddl.auto=update
