--- a/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
+++ b/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
@@ -11,7 +11,7 @@ test.jdbc.userName=exifweb
 test.jdbc.password=exifweb
 test.jdbc.minimumIdle=1
 test.jdbc.maximumPoolSize=2
-test.hibernate.hbm2ddl.auto=update
+test.hibernate.hbm2ddl.auto=create-drop
 
 # in memory db
 ramdb.hibernate.hbm2ddl.auto=update
