test.hibernate.hbm2ddl.auto=create-drop PutAlbumCoverTest.putAlbumCover

--- a/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
+++ b/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
@@ -12,6 +12,7 @@ test.jdbc.password=exifweb
 test.jdbc.minimumIdle=1
 test.jdbc.maximumPoolSize=2
 test.hibernate.hbm2ddl.auto=create-drop
+#test.hibernate.hbm2ddl.auto=update
 
 # in memory db
 ramdb.hibernate.hbm2ddl.auto=update
