--- a/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
+++ b/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
@@ -1,9 +1,9 @@
 # mysql, exifweb
-jdbc.url=jdbc:mysql://${db.host}:3306/exifweb?useSSL=false
-jdbc.userName=exifweb
-jdbc.password=exifweb
-jdbc.minimumIdle=1
-jdbc.maximumPoolSize=2
+prod.jdbc.url=jdbc:mysql://${db.host}:3306/exifweb?useSSL=false
+prod.jdbc.userName=exifweb
+prod.jdbc.password=exifweb
+prod.jdbc.minimumIdle=1
+prod.jdbc.maximumPoolSize=2
 
 # mysql, exifweb-tests
 test.jdbc.url=jdbc:mysql://${test.db.host}:3306/exifweb-tests?useSSL=false
