--- a/storage-entities/pom.xml
+++ b/storage-entities/pom.xml
@@ -25,5 +25,9 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>exifweb</groupId>
+            <artifactId>cdm</artifactId>
+        </dependency>
     </dependencies>
 </project>
