--- a/pom.xml
+++ b/pom.xml
@@ -370,6 +370,11 @@
                 <artifactId>lombok</artifactId>
                 <version>1.16.20</version>
             </dependency>
+            <!--<dependency>-->
+            <!--<groupId>com.github.peichhorn</groupId>-->
+            <!--<artifactId>lombok-pg</artifactId>-->
+            <!--<version>0.11.3</version>-->
+            <!--</dependency>-->
 
             <dependency>
                 <groupId>com.zaxxer</groupId>
@@ -468,6 +473,11 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!--<dependency>-->
+        <!--<groupId>com.github.peichhorn</groupId>-->
+        <!--<artifactId>lombok-pg</artifactId>-->
+        <!--<scope>provided</scope>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>junit</groupId>
