--- a/storage-impl-hbm/pom.xml
+++ b/storage-impl-hbm/pom.xml
@@ -141,6 +141,11 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
                 <configuration combine.self="append">
+                    <sources>
+                        <source>
+                            <basedir>${project.build.directory}/generated-sources/delombok</basedir>
+                        </source>
+                    </sources>
                     <aspectLibraries>
                         <aspectLibrary>
                             <groupId>org.springframework</groupId>
