--- a/pom.xml
+++ b/pom.xml
@@ -723,21 +723,33 @@
                         <verbose>false</verbose>
                         <showWeaveInfo>false</showWeaveInfo>
                         <privateScope>true</privateScope>
-                        <!--<sources>-->
-                        <!--<source>-->
-                        <!--<basedir>${project.build.directory}/generated-sources/delombok</basedir>-->
-                        <!--</source>-->
-                        <!--<source>-->
-                        <!--<basedir>${project.build.directory}/generated-test-sources/delombok</basedir>-->
-                        <!--</source>-->
-                        <!--</sources>-->
+
+                        <!--
+                            https://palesz.wordpress.com/2011/12/03/howto-maven-lombok-and-aspectj-together/
+
+                            maven + aspectj + lombok problem
+                        -->
+                        <sources><source/></sources>
+                        <forceAjcCompile>true</forceAjcCompile>
+                        <weaveDirectories>
+                            <weaveDirectory>${project.build.directory}/classes</weaveDirectory>
+                            <weaveDirectory>${project.build.directory}/test-classes</weaveDirectory>
+                        </weaveDirectories>
+
                         <source>${source.version}</source>
                         <target>${source.version}</target>
                         <complianceLevel>${source.version}</complianceLevel>
                     </configuration>
                     <executions>
+                        <!--<execution>-->
+                            <!--<phase>process-sources</phase>-->
+                            <!--<goals>-->
+                                <!--<goal>compile</goal>-->
+                                <!--<goal>test-compile</goal>-->
+                            <!--</goals>-->
+                        <!--</execution>-->
                         <execution>
-                            <phase>process-sources</phase>
+                            <phase>process-classes</phase>
                             <goals>
                                 <goal>compile</goal>
                                 <goal>test-compile</goal>
@@ -757,10 +769,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok-maven-plugin</artifactId>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.projectlombok</groupId>-->
+                <!--<artifactId>lombok-maven-plugin</artifactId>-->
+            <!--</plugin>-->
         </plugins>
 
         <resources>
