--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
         <jstl>1.2</jstl>
         <lombok.version>1.16.20</lombok.version>
         <lombok-maven-plugin.version>1.16.20.0</lombok-maven-plugin.version>
+
+        <junit.version>4.12</junit.version>
+        <junit.jupiter.version>5.1.0</junit.jupiter.version>
+        <junit.vintage.version>5.1.0</junit.vintage.version>
+        <junit.platform.version>1.1.0</junit.platform.version>
     </properties>
 
     <repositories>
@@ -371,11 +376,13 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+                <scope>provided</scope>
             </dependency>
             <!--<dependency>-->
             <!--<groupId>com.github.peichhorn</groupId>-->
             <!--<artifactId>lombok-pg</artifactId>-->
             <!--<version>0.11.3</version>-->
+            <!--<scope>provided</scope>-->
             <!--</dependency>-->
 
             <dependency>
@@ -402,41 +409,72 @@
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>1.4.196</version>
+                <scope>test</scope>
             </dependency>
             <!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
             <!--<dependency>-->
             <!--<groupId>org.hsqldb</groupId>-->
             <!--<artifactId>hsqldb</artifactId>-->
             <!--<version>2.4.0</version>-->
+            <!--<scope>test</scope>-->
             <!--</dependency>-->
             <!-- https://mvnrepository.com/artifact/org.apache.derby/derby -->
             <!--<dependency>-->
             <!--<groupId>org.apache.derby</groupId>-->
             <!--<artifactId>derby</artifactId>-->
             <!--<version>10.14.1.0</version>-->
+            <!--<scope>test</scope>-->
             <!--</dependency>-->
 
-            <!-- https://mvnrepository.com/artifact/junit/junit -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit.jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.12</version>
+                <version>${junit.version}</version>
+                <scope>test</scope>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-library -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit.jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.vintage</groupId>
+                <artifactId>junit-vintage-engine</artifactId>
+                <version>${junit.vintage.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <!-- Only required to run tests in an IDE that bundles an older version -->
+            <dependency>
+                <groupId>org.junit.platform</groupId>
+                <artifactId>junit-platform-launcher</artifactId>
+                <version>${junit.platform.version}</version>
+                <scope>test</scope>
+            </dependency>
+
             <dependency>
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest-library</artifactId>
                 <version>1.3</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.exparity</groupId>
                 <artifactId>hamcrest-date</artifactId>
                 <version>2.0.4</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
                 <version>${springframework.version}</version>
+                <scope>test</scope>
             </dependency>
             <!--
                 https://mvnrepository.com/artifact/io.takari.junit/takari-cpsuite
@@ -447,6 +485,7 @@
                 <groupId>io.takari.junit</groupId>
                 <artifactId>takari-cpsuite</artifactId>
                 <version>1.2.7</version>
+                <scope>test</scope>
             </dependency>
             <!-- https://mvnrepository.com/artifact/net.sf.jexample/jexample -->
             <!--<dependency>-->
@@ -459,6 +498,7 @@
                 <groupId>com.github.stephenc.jcip</groupId>
                 <artifactId>jcip-annotations</artifactId>
                 <version>1.0-1</version>
+                <scope>test</scope>
             </dependency>
             <!--<dependency>-->
             <!--<groupId>net.jcip</groupId>-->
@@ -473,53 +513,54 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>provided</scope>
         </dependency>
         <!--<dependency>-->
         <!--<groupId>com.github.peichhorn</groupId>-->
         <!--<artifactId>lombok-pg</artifactId>-->
-        <!--<scope>provided</scope>-->
         <!--</dependency>-->
 
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.takari.junit</groupId>
-            <artifactId>takari-cpsuite</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.exparity</groupId>
             <artifactId>hamcrest-date</artifactId>
-            <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>net.sf.jexample</groupId>-->
-        <!--<artifactId>jexample</artifactId>-->
-        <!--</dependency>-->
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.takari.junit</groupId>
+            <artifactId>takari-cpsuite</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.github.stephenc.jcip</groupId>
             <artifactId>jcip-annotations</artifactId>
-            <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>net.jcip</groupId>-->
-        <!--<artifactId>jcip-annotations</artifactId>-->
-        <!--<scope>test</scope>-->
-        <!--</dependency>-->
     </dependencies>
 
     <build>
